レスポンス表示への切り替えをJavascriptから変更

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link id="style-sheet" rel="stylesheet">
+    <link id="style-sheet" rel="stylesheet" th:href="@{${cssPath}}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spring-Thymeleaf カレンダー</title>
